; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform-nix.c_os_opendir.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform-nix.c_os_opendir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.os_dir = type { i8*, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.os_dir* @os_opendir(i8* %0) #0 {
  %2 = alloca %struct.os_dir*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.os_dir*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32* @opendir(i8* %6)
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store %struct.os_dir* null, %struct.os_dir** %2, align 8
  br label %20

11:                                               ; preds = %1
  %12 = call %struct.os_dir* @bzalloc(i32 16)
  store %struct.os_dir* %12, %struct.os_dir** %4, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = load %struct.os_dir*, %struct.os_dir** %4, align 8
  %15 = getelementptr inbounds %struct.os_dir, %struct.os_dir* %14, i32 0, i32 1
  store i32* %13, i32** %15, align 8
  %16 = load i8*, i8** %3, align 8
  %17 = load %struct.os_dir*, %struct.os_dir** %4, align 8
  %18 = getelementptr inbounds %struct.os_dir, %struct.os_dir* %17, i32 0, i32 0
  store i8* %16, i8** %18, align 8
  %19 = load %struct.os_dir*, %struct.os_dir** %4, align 8
  store %struct.os_dir* %19, %struct.os_dir** %2, align 8
  br label %20

20:                                               ; preds = %11, %10
  %21 = load %struct.os_dir*, %struct.os_dir** %2, align 8
  ret %struct.os_dir* %21
}

declare dso_local i32* @opendir(i8*) #1

declare dso_local %struct.os_dir* @bzalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
